Do not unnecessarily update the systray icon to prevent undesired repaints.

BUG: 301723