applet/networkmanager.cpp
@@ -395,7 +395,8 @@ void NetworkManagerApplet::constraintsEvent(Plasma::Constraints constraints)
 void NetworkManagerApplet::updatePixmap()
 {
     int s = UiUtils::iconSize(contentsRect().size());
-    m_pixmap = KIcon(UiUtils::iconName(m_activeSystrayInterface)).pixmap(s, s);
+    m_currentPixmapIconName = UiUtils::iconName(m_activeSystrayInterface);
+    m_pixmap = KIcon(m_currentPixmapIconName).pixmap(s, s);
     update();
 }
 
@@ -409,6 +410,24 @@ void NetworkManagerApplet::paintInterface(QPainter * p, const QStyleOptionGraphi
         adjustSize();
         return;
     }
+
+#if 1
+    QString el = svgElement(m_activeSystrayInterface);
+#else
+    QString el;
+    foreach (NetworkManager::Device *d, NetworkManager::networkInterfaces()) {
+        if (d->type() == NetworkManager::Device::Modem) {
+            el = svgElement(d);
+            break;
+        }
+    }
+#endif
+
+    if(el == m_currentSvgElement || (el.isEmpty() && m_currentSvgElement == m_currentPixmapIconName)) {
+        // no need to update systray icon
+        return;
+    }
+
 
     /* I am using setPopupIcon at the end of this method to make the usual system tray icon's hover and click
      * effects work. However, setPopupIcon creates a Plasma::IconWidget object that draws itself over
@@ -426,21 +445,11 @@ void NetworkManagerApplet::paintInterface(QPainter * p, const QStyleOptionGraphi
     QPainter painter;
     painter.begin(&newIcon);
 
-#if 1
-    QString el = svgElement(m_activeSystrayInterface);
-#else
-    QString el;
-    foreach (NetworkManager::Device *d, NetworkManager::networkInterfaces()) {
-        if (d->type() == NetworkManager::Device::Modem) {
-            el = svgElement(d);
-            break;
-        }
-    }
-#endif
-
     if (el.isEmpty()) {
+	m_currentSvgElement = m_currentPixmapIconName;
         painter.drawPixmap(QPoint(0,0), m_pixmap);
     } else {
+        m_currentSvgElement = el;
         if (el.startsWith(QLatin1String("network-mobile"))) {
             m_svgMobile->paint(&painter, rect, el);
         } else {
